--- a/clusters/homelab/personal-site/pages/index.html
+++ b/clusters/homelab/personal-site/pages/index.html
@@ -1,12 +1,182 @@
-<!doctype html>
-<html>
-  <head><meta charset="utf-8"><title>Home</title></head>
-  <body style="font-family: sans-serif">
-    <h1>Welcome to NGINX</h1>
-    <p>Served from a Kubernetes ConfigMap folder.</p>
-    <ul>
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/status.html">Status</a></li>
-    </ul>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Joseph Whiteaker – Cloud-Native Engineer</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <style>
+    :root {
+      color-scheme: light dark;
+    }
+
+    html {
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
+    }
+
+    .tile {
+      box-shadow: 0 10px 28px rgba(2, 6, 23, 0.08);
+    }
+
+    .tile:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 20px 40px rgba(2, 6, 23, 0.16);
+    }
+
+    .brand-img {
+      width: 56px;
+      height: 56px;
+    }
+
+    @media (min-width: 640px) {
+      .brand-img {
+        width: 64px;
+        height: 64px;
+      }
+    }
+
+    @media (min-width: 1024px) {
+      .brand-img {
+        width: 72px;
+        height: 72px;
+      }
+    }
+  </style>
+</head>
+
+<body class="bg-white text-slate-900 dark:bg-slate-950 dark:text-slate-100">
+  <header class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 flex items-center justify-between">
+    <div class="flex items-center gap-3">
+      <div class="h-9 w-9 rounded-xl bg-indigo-600 dark:bg-indigo-500 grid place-items-center text-white font-black">JW
+      </div>
+      <span class="font-semibold tracking-tight">Joseph Whiteaker</span>
+    </div>
+    <div class="flex items-center gap-3">
+      <a href="#projects"
+        class="hidden sm:inline text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-slate-900 dark:hover:text-white">Projects</a>
+      <a href="#writing"
+        class="hidden sm:inline text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-slate-900 dark:hover:text-white">Writing</a>
+      <a href="#contact"
+        class="hidden sm:inline text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-slate-900 dark:hover:text-white">Contact</a>
+      <button id="mode" class="ml-2 rounded-xl border border-slate-200 dark:border-slate-800 px-3 py-1.5 text-xs">Toggle
+        theme</button>
+    </div>
+  </header>
+
+  <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-6 pb-16">
+    <div class="text-center max-w-3xl mx-auto">
+      <h1 class="text-4xl sm:text-5xl leading-tight font-extrabold tracking-tight">
+        Building the open-source cloud-native stack that runs everywhere
+      </h1>
+      <p class="mt-5 text-lg text-slate-600 dark:text-slate-300">
+        I build secure, automated platforms across AWS and Azure with GitOps, policy, and developer experience at the
+        core.
+      </p>
+      <div class="mt-7 flex items-center justify-center gap-3">
+        <a href="#get-started"
+          class="inline-flex items-center gap-2 rounded-2xl bg-rose-600 hover:bg-rose-500 text-white font-semibold px-5 py-3">Get
+          Started</a>
+        <a href="#resume"
+          class="inline-flex items-center gap-2 rounded-2xl border border-slate-200 dark:border-slate-800 px-5 py-3 font-semibold">View
+          Résumé</a>
+      </div>
+    </div>
+
+    <div class="mt-14 grid grid-cols-3 sm:grid-cols-6 gap-5 place-items-center">
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Argo CD" class="brand-img" src="https://cdn.simpleicons.org/argo" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Flux" class="brand-img" src="https://cdn.simpleicons.org/flux" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Helm" class="brand-img" src="https://cdn.simpleicons.org/helm" />
+      </div>
+
+      <div
+        class="col-span-3 sm:col-span-3 lg:col-span-2 tile bg-white dark:bg-slate-900 rounded-3xl p-8 border border-slate-100 dark:border-slate-800 flex items-center justify-center">
+        <img alt="Kubernetes" class="w-28 h-28 sm:w-32 sm:h-32" src="https://cdn.simpleicons.org/kubernetes" />
+      </div>
+
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Podman" class="brand-img" src="https://cdn.simpleicons.org/podman" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="CentOS" class="brand-img"
+          src="https://d7umqicpi7263.cloudfront.net/img/product/bf98a07a-9aa9-45f8-b79b-953878714ee4.png" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Rancher" class="brand-img"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rancher/rancher-original.svg" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Kyverno" class="brand-img"
+          src="https://raw.githubusercontent.com/kyverno/kyverno/main/img/logo.png" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Keycloak" class="brand-img" src="https://cdn.simpleicons.org/keycloak" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Nginx" class="brand-img" src="https://cdn.simpleicons.org/nginx" />
+      </div>
+
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="AWS" class="brand-img"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Azure" class="brand-img"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/azure/azure-original.svg" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="PostgreSQL" class="brand-img" src="https://cdn.simpleicons.org/postgresql" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Redis" class="brand-img" src="https://cdn.simpleicons.org/redis" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Terraform" class="brand-img" src="https://cdn.simpleicons.org/terraform" />
+      </div>
+      <div class="tile bg-white dark:bg-slate-900 rounded-2xl p-5 border border-slate-100 dark:border-slate-800">
+        <img alt="Ansible" class="brand-img" src="https://cdn.simpleicons.org/ansible" />
+      </div>
+    </div>
+  </section>
+
+  <section class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 pb-20">
+    <div class="grid md:grid-cols-2 gap-6">
+      <div class="tile rounded-3xl bg-white dark:bg-slate-900 border border-slate-100 dark:border-slate-800 p-8">
+        <h3 class="text-xl font-semibold">Opinionated, automation-first</h3>
+        <p class="mt-3 text-slate-600 dark:text-slate-300">Flux/Argo for GitOps, Kyverno for policy, and COSIGN-signed
+          containers. Everything declarative, everything reproducible.</p>
+      </div>
+      <div class="tile rounded-3xl bg-white dark:bg-slate-900 border border-slate-100 dark:border-slate-800 p-8">
+        <h3 class="text-xl font-semibold">DX that teams actually enjoy</h3>
+        <p class="mt-3 text-slate-600 dark:text-slate-300">Backstage templates, self-service scaffolding, and paved-road
+          clusters across AKS &amp; EKS.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer class="border-t border-slate-100 dark:border-slate-800 py-10 text-center text-sm text-slate-500">
+    © <span id="y"></span> Joseph Whiteaker • Cloud-Native Engineer
+  </footer>
+
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+    document.getElementById('mode').addEventListener('click', () => {
+      document.documentElement.classList.toggle('dark');
+      localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light';
+    });
+    if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      document.documentElement.classList.add('dark');
+    }
+  </script>
+</body>
+
 </html>
